# duckdb-sample-project

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: dbt-update.yml
dbt_imdb/imdb_movies/: README.md  dbt_project.yml  profiles.yml
dbt_imdb/imdb_movies/database/: imdb_movies.duckdb
dbt_imdb/imdb_movies/models/marts/: movie_analytics.sql
dbt_imdb/imdb_movies/models/staging/: stg_movies.sql
dbt_imdb_duckdb/: packages.yml  profiles.yml
dbt_imdb_duckdb/database/: .gitignore  .gitkeep  imdb_movies.duckdb
dbt_imdb_duckdb/models/marts/: movie_analytics.sql
dbt_imdb_duckdb/models/staging/: stg_movies.sql
