[project]
name = "duckdb-sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.1",
    "ruff>=0.11.8",
]
