[project]
name = "duckdb-sample-project"
version = "0.1.0"
description = "A sample project using DuckDB and dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core~=1.9.0",
    "dbt-duckdb~=1.9.0",
    "duckdb~=0.9.2",
    "pandas~=2.0.0",
    "streamlit~=1.31.0",
    "plotly~=5.18.0",
    "watchdog~=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter~=1.1.1",
    "notebook~=7.4.1",
    "ruff~=0.11.8",
]
