[project]
name = "duckdb-sample-project"
version = "0.1.0"
description = "A sample project using DuckDB and dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb~=1.9.0",
    "duckdb~=1.0.0",
    "plotly~=5.18.0",
    "streamlit~=1.45.0",
    "watchdog~=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter~=1.1.1",
    "notebook~=7.4.1",
    "ruff~=0.11.8",
    "sqlfluff==3.0.1"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
